--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: iPreview
-description: quicklook all file, source code, 3D models, webp, avif and any more
+description: iPreview provides quick look file preview for source code, Markdown, Jupyter, Webp, Avif images and multiple 3D Model file types
