--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: iPreview
-description: iPreview provides quick look file preview for source code, Markdown, Jupyter, Webp, Avif images and multiple 3D Model file types
+description: iPreview provides quicklook preview for source code, Markdown, Jupyter, Webp, Avif, 3D Model file types in Macos Finder, Quicklook, Spotlight
