--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: iPreview
-description: iPreview provides Quicklook preview for multiple file types in Macos Finder, Quicklook, Spotlight, such as source code, Markdown, Jupyter, Webp, Avif, 3D model, etc.
+description: iPreview provides quicklook preview for source code, Markdown, Jupyter, Webp, Avif, 3D Model and any more file types in Macos Finder, Quicklook, Spotlight
