--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ description: iPreview provides quicklook preview for source code, Markdown, Jupy
 google_analytics: UA-138610487-4
 app_store:
   show: true
-  title: 
+  download_url: https://apps.apple.com/cn/app/id1519213509
